--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,10 @@
   <link rel="dx-theme" data-theme="generic.light" href="https://cdn3.devexpress.com/jslib/17.1.7/css/dx.light.css" />
 </head>
 <body>
-  <demo-app>
-    <span style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Loading...</span>
-  </demo-app>
+  <div id="wrapper">
+    <app>
+      <span style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Loading...</span>
+    </app>
+  </div>
 </body>
 </html>
